[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "testweavex"
version = "0.1.0"
description = "Unified test management and execution platform with LLM-powered test generation"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "pyyaml>=6.0",
    "pytest>=7.0",
    "pytest-bdd>=7.0",
    "pytest-playwright>=0.4",
    "pytest-xdist>=3.0",
    "typer>=0.9",
    "httpx>=0.24",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "rich>=13.0",
]

[project.optional-dependencies]
openai    = ["openai>=1.0"]
anthropic = ["anthropic>=0.20"]
ollama    = ["ollama>=0.1"]
dev       = ["pytest-cov>=4.0"]

[project.entry-points."pytest11"]
testweavex = "testweavex.execution.plugin"

[project.scripts]
tw = "testweavex.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["testweavex*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
